--- a/agenda/package.json
+++ b/agenda/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.6.3",
+    "ant-design-vue": "^1.7.8",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
