--- a/agenda/package.json
+++ b/agenda/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "core-js": "^3.6.5",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
